2005-02-15 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Display/Image.chs.pp: fix an #if test so that it
	works correctly and is consistent with the other similar ones.

2005-02-14 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/glib-sources.xml: add extra sources spec.

	* tools/apiGen/gnomecanvas-sources.xml: refer to the correct version.

	* tools/apiGen/format-docs.xsl: collect docs on "Style Properties" and
	allow formatting in module summary.

	* tools/apiGen/Api.hs, tools/apiGen/Docs.hs, tools/apiGen/Marshal.hs,
	tools/apiGen/FormatDocs.hs, tools/apiGen/CodeGen.hs,
	tools/apiGen/ApiGen.hs: lots of little improvements to the generated
	documentation. Generalise the "KnownTypes" table to "KnownSymbols" and
	use that in various places to make the recognition of things we should
	hyperlink more accurate. Convert enum value names to Haskell style
	names. Recognise type names and enum value names even when they are
	not marked up in the original docs. Deal with deprecated objects and
	methods, but only generate deprecated methods where they exist in the
	original modules (ie don't add new deprecated methods). Handle
	"shared" methods but ignore the *_get_type() ones. Cchange to using
	FM's for the KnownSymbols map so it's not all quite so slow.

	* tools/apiGen/Makefile: use the glib api when generating the gtk
	modules, and similarly, use the gtk api when generating the
	gnomecanvas modules.

2005-02-13 Axel Simon <A.Simon@kent.ac.uk>

	* configure.ac: Removed some unnecessary tests and variable.

	* tools/checkDir: Use $SED from the configure file instead of sed,
	similar for grep. This helps on Solaris where the native sed cannot
	cope with the expression in this file, giving a "Bad substitution".

	* gtk/Graphics/UI/Gtk/General/IconFactory.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileChooser.chs.pp: Conditionally
	rename functions that take file names to match the special convention
	of having a _utf8 ending on Windows.
